# callhash

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/callhash/: __init__.py  _nhash.py  table.py
tests/: test_nhash.py  test_table.py
