[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callhash"
version = "1.0.0"
description = "WSJT-X callsign-hash mechanism (Bob Jenkins lookup3, seed 146) plus a per-station accumulator that resolves hashes from <call> announcement markers in decoded jt9 / wsprd output."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Michael Hauan AC0G", email = "ac0g@hauan.org" },
  { name = "Rob Robinett AI6VN" },
]
requires-python = ">=3.10"
keywords = ["wsjt-x", "ham radio", "ft8", "ft4", "wspr", "callsign", "hash"]
# Pure stdlib — no runtime deps.
dependencies = []

[project.urls]
Homepage      = "https://github.com/mijahauan/callhash"
"Bug Tracker" = "https://github.com/mijahauan/callhash/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["callhash*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
